fixed stylesheet path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Horiseon Homepage</title>
 
-    <link rel="stylesheet" href="c:\Users\bn3l1\projects\horiseon project\style.css"
+    <link rel="stylesheet" href="style.css"
     
 
 </head>
