--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div id="search-engine-optimization" class="section-title">
             
-            <img src="../horiseon project/images/search-engine-optimization.jpg" alt="desk with computer and notebooks and pens ect" class="float-left" />
+            <img src="search-engine-optimization.jpg" alt="desk with computer and notebooks and pens ect" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
 
@@ -65,7 +65,7 @@
 
         <div id="online-reputation-management" class="section-title">
 
-            <img src="../horiseon project/images/online-reputation-management.jpg" alt="laptop on desk with man using phone" class="float-right" />
+            <img src="online-reputation-management.jpg" alt="laptop on desk with man using phone" class="float-right" />
 
             <h2>Online Reputation Management</h2>
 
@@ -77,7 +77,7 @@
 
         <div id="social-media-marketing" class="section-title">
 
-                <img src="../horiseon project/images/social-media-marketing.jpg" alt="large meeting desk with multiple devices and paper popup style images" class="float-left" />
+                <img src="social-media-marketing.jpg" alt="large meeting desk with multiple devices and paper popup style images" class="float-left" />
 
             <h2>Social Media Marketing</h2>
 
@@ -97,7 +97,7 @@
 
             <h3>Lead Generation</h3>
 
-                <img src="../horiseon project/images/lead-generation.png" alt="icon showing lead generation graphic" />
+                <img src="lead-generation.png" alt="icon showing lead generation graphic" />
              <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
              </p>
@@ -108,7 +108,7 @@
 
             <h3>Brand Awareness</h3>
 
-                <img src="../horiseon project/images/lead-generation.png" alt="icon with lightbulb demonstrating brand awareness"/>
+                <img src="brand-awareness.png" alt="icon with lightbulb demonstrating brand awareness"/>
              <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
              </p>
@@ -119,7 +119,7 @@
 
             <h3>Cost Management</h3>
 
-                <img src="../horiseon project/images/cost-management.png" alt="icon with gears and money symbols demonstrating cost cost-management"></img>
+                <img src="cost-management.png" alt="icon with gears and money symbols demonstrating cost cost-management"></img>
              <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
              </p>
