--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div id="search-engine-optimization" class="section-title">
             
-            <img src="search-engine-optimization.jpg" alt="desk with computer and notebooks and pens ect" class="float-left" />
+            <img src="./search-engine-optimization.jpg" alt="desk with computer and notebooks and pens ect" class="float-left" />
 
             <h2>Search Engine Optimization</h2>
 
