--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
     <title>Horiseon Homepage</title>
 
-    <link rel="stylesheet" href="style.css"
-    
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
